# ironstate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: dependabot.yml  report-mutants.sh
.github/workflows/: ci.yml  fuzz.yml  mutants.yml  quality.yml  release-pr.yml  release.yml
app/: Cargo.toml  deny.toml  release.toml  rust-toolchain.toml
app/.cargo/: mutants.toml
app/crates/examples/: README.md
app/crates/examples/async-store/: Cargo.toml  README.md
app/crates/examples/async-store/src/: main.rs
app/crates/examples/catalog-ctx/: Cargo.toml  README.md
app/crates/examples/catalog-ctx/src/: main.rs
app/crates/examples/hidden-info/: Cargo.toml  README.md
app/crates/examples/hidden-info/src/: main.rs
app/crates/examples/ledger/: Cargo.toml  README.md
app/crates/examples/ledger/src/: main.rs
app/crates/examples/release-pipeline/: Cargo.toml  README.md
app/crates/examples/release-pipeline/src/: main.rs
app/crates/ironstate/: CHANGELOG.md  Cargo.toml  README.md
app/crates/ironstate-aggregate/: CHANGELOG.md  Cargo.toml  README.md
app/crates/ironstate-aggregate-derive/: CHANGELOG.md  Cargo.toml  README.md
app/crates/ironstate-aggregate-derive/src/: lib.rs  redact.rs  stablehash.rs  versioned.rs
app/crates/ironstate-aggregate/src/: entropy.rs  lib.rs  macros.rs  redaction.rs  rules.rs  stablehash.rs  testkit.rs
app/crates/ironstate-aggregate/tests/: aggregate.rs  entropy.rs  golden.rs  planted_leak.rs  planted_nondeterminism.rs  redaction.rs  stablehash.rs  testkit.rs  ui.rs  versioned_event.rs
app/crates/ironstate-aggregate/tests/ui/: float_field.rs  float_field.stderr  float_in_vec.rs  float_in_vec.stderr  hashmap_field.rs  hashmap_field.stderr  instant_field.rs  instant_field.stderr
app/crates/ironstate-derive/: CHANGELOG.md  Cargo.toml  README.md
app/crates/ironstate-derive/src/: common.rs  event.rs  lib.rs  statemachine.rs
app/crates/ironstate-journal/: CHANGELOG.md  Cargo.toml  README.md
app/crates/ironstate-journal/src/: contract.rs  journal.rs  lib.rs  macros.rs  memory.rs  replay.rs  sim.rs  subscription.rs
app/crates/ironstate-journal/tests/: contract.rs  journal.rs  subscription.rs
app/crates/ironstate/fuzz/: Cargo.toml
app/crates/ironstate/fuzz/fuzz_targets/: restore.rs
app/crates/ironstate/src/: analysis.rs  error.rs  invariant.rs  kind.rs  lib.rs  listener.rs  machine.rs  macros.rs  metadata.rs  migrate.rs  testing.rs
app/crates/ironstate/tests/: core.rs  invariants.rs  versioned.rs
assets/: README.md  brand.py
docs/: README.md  design.md  guide.md  testing.md
docs/decisions/: 0001-foundational-decisions.md  0002-deferred-and-out-of-scope.md
src/: lib.rs
