[package]
name = "ironstate-aggregate-derive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for ironstate-aggregate (StableHash, Redact, Versioned)"
readme = "README.md"
keywords = ["state-machine", "derive", "macro", "aggregate"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
trybuild.workspace = true
