[package]
name = "async-store"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Making an async, authoritative store (think tokio-postgres) durable through ironstate without implementing the synchronous `Journal` trait: drive `prepare`/`commit`/`abort` around your own awaited append, and keep the storage under `journal_contract_test!` with a sync twin"

[dependencies]
ironstate = { workspace = true }
ironstate-aggregate = { workspace = true, features = ["proptest"] }
ironstate-journal = { workspace = true, features = ["sim"] }
anyhow.workspace = true
thiserror.workspace = true
proptest.workspace = true

[[bin]]
name = "async-store"
path = "src/main.rs"
