[package]
name = "ledger"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "An account ledger as an ironstate aggregate over a journal; an end-to-end example"

[dependencies]
ironstate = { workspace = true }
ironstate-aggregate = { workspace = true, features = ["proptest", "audit"] }
ironstate-journal = { workspace = true, features = ["sim"] }
anyhow.workspace = true
thiserror.workspace = true
proptest.workspace = true

[[bin]]
name = "ledger"
path = "src/main.rs"
